crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__int_all_types@UInt64Type.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Int(
        IntFilter {
            operator: Eq,
            rhs_value: Some(
                3,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: UInt64,
    },
    unfiltered: PrimitiveArray<UInt64>
    [
      1,
      2,
      3,
      4,
      5,
    ],
    filtered: PrimitiveArray<UInt64>
    [
      3,
    ],
}
